# Ping

./: .gitattributes  .gitignore  CHROME_UI_PLAN.md  CLAUDE.md  CMakeLists.txt  Plan-Bloom.md  Plan-Cloud.md  Plan-Shimmer.md  README.md  factory-ir-regeneration-context.md  ping_chrome_mockup.html  ping_chrome_mockup_v2.html  ping_lowlights.docx
Docs/: 2.3.7-revert-summary.md  3D-Mic-Tilt-Implementation-Brief.md  3d-mic-tilt-baseline.txt  Multi-Mic-Implementation-Brief.md  Multi-Mic-Plan.md  Multi-Mic-Work-Plan.md  PING User Manual v1.6.0.docx  PING User Manual v2.4.2.md  Ping_IR_Engine_Guide.docx  Ping_IR_Engine_Guide_v2.3.9.docx  Plan-Crossfeed-Control.md  Plan-Factory-Content.md  Plan-Mirror-Symmetric-Jitter.md  Plan-Stereo-Decorrelation-Allpass.md  Polygon-Quality-Work-Plan.md  Polygon-Room-Geometry-Plan.md  QuickStart.md  QuickStart.rtf  Research-Cinematic-Rooms-Comparison.md  TechnicalReference.md  UserManual.md  UserManual.rtf  angle-display-plan.md  deep-research-report.md  freq-dependent-mic-polar-plan.md
Docs/DesignPackage/: Plan-HybridModes.md  README.md  control-spec.md  design-tokens.json
Installer/: README.md  build_installer.sh
Installer/factory_irs/Halls/: Carnegie Hall New York.ping  Cello Epic Hall.ping  Concertgebouw Amsterdam.ping  King's College Chapel Cambridge.ping  Large Concert.ping  Med Orch Hall.ping  Percussion Hall centre.ping  Sage Gateshead Hall One.ping  St Jude-on-the-Hill Hampstead.ping  Vienna Musikverein Golden Hall.ping
Installer/factory_irs/Large Spaces/: Elbphilharmonie Hamburg.ping  Epic Room.ping  Hansa Meistersaal Berlin.ping  Large Beauty Space.ping  Royal Albert Hall London.ping  Sydney Opera House Concert Hall.ping  Usher Hall Edinburgh.ping  Warm Long Church.ping
Installer/factory_irs/Rooms/: Abbey Road Studio Two.ping  Brick Room.ping  British Grove Studios London.ping  Drum Circle.ping  Electric Lady Studios New York.ping  Metropolis Studios London.ping  Perc Room Med Centre.ping  RAK Studios London.ping  Sunset Sound Studio 2 Hollywood.ping
Installer/factory_irs/Scoring Stages/: Abbey Road Studio One.ping  Capitol Studios Hollywood A.ping  Medium Studio.ping  Medium wide Space.ping  Ocean Way Nashville Studio A.ping  Warner Bros Eastwood Scoring Stage.ping  Wide Scoring Stage WW left.ping
Installer/factory_irs/Tight Spaces/: Abbey Road Echo Chamber.ping  Capitol Studios Echo Chamber.ping  Concrete Stairwell.ping  Damped Studio Booth.ping  Drum space.ping  Stone Recital Room.ping  Tiled Shower Room.ping
Installer/factory_presets/Halls/: Carnegie Hall New York.xml  Concertgebouw Amsterdam.xml  King's College Chapel Cambridge.xml  Orch Beauty Med Hall.xml  PT - Pop Trumpets.xml  Percussion Medium Hall Centred.xml  Sage Gateshead Hall One.xml  St Jude-on-the-Hill Hampstead.xml  Vienna Musikverein Golden Hall.xml
Installer/factory_presets/Large Spaces/: Ac Guitar Beauty Shimmer.xml  Elbphilharmonie Hamburg.xml  Epic Cello Solo Hall.xml  Hansa Meistersaal Berlin.xml  Large Beauty Shimmer.xml  Large Warm Golden Hour.xml  Royal Albert Hall London.xml  Solo Beautyverb.xml  Sydney Opera House Concert Hall.xml  Usher Hall Edinburgh.xml
Installer/factory_presets/Rooms/: Abbey Road Studio Two.xml  British Grove Studios London.xml  Electric Lady Studios New York.xml  Metropolis Studios London.xml  Percussion Medium Room Centred.xml  RAK Studios London.xml  Sunset Sound Studio 2 Hollywood.xml
Installer/factory_presets/Scoring Stages/: Abbey Road Studio One.xml  Alto Flute Scoring Stage.xml  Capitol Studios Hollywood A.xml  Ocean Way Nashville Studio A.xml  Warner Bros Eastwood Scoring Stage.xml
Installer/factory_presets/Tight Spaces/: Abbey Road Echo Chamber.xml  Capitol Studios Echo Chamber.xml  Concrete Stairwell.xml  Damped Studio Booth.xml  Drums Add Live Smash.xml  Stone Recital Room.xml  Tiled Shower Room.xml
Resources/: instrument-radiation.json
Source/: EQGraphComponent.cpp  EQGraphComponent.h  FloorPlanComponent.cpp  FloorPlanComponent.h  HP2ndOrder.h  IRManager.cpp  IRManager.h  IRSynthComponent.cpp  IRSynthComponent.h  IRSynthEngine.cpp  IRSynthEngine.h  LicenceScreen.h  LicenceVerifier.h  MicMixerComponent.cpp  MicMixerComponent.h  OutputLevelMeter.h  PingLookAndFeel.cpp  PingLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  WaveformComponent.cpp  WaveformComponent.h
Tests/: PingDSPTests.cpp  PingDeccaTests.cpp  PingEngineTests.cpp  PingMultiMicTests.cpp  PingPolygonTests.cpp  TestHelpers.h
Tools/: Serial Generator (Terminal).applescript  add_srcrad_to_factory_presets.py  add_srcrad_to_factory_sidecars.py  build_keygen.sh  fix_factory_preset_paths.py  generate_factory_irs.cpp  jitter_ab_render.cpp  keygen  keygen.cpp  launch_serial_generator.applescript  octagonal_direct_probe.cpp  octagonal_lateral_map.cpp  octagonal_lateral_map_full.cpp  rebake_factory_irs.cpp  reset_spkdirfull_in_factory.py  serial_generator.py  source_radiation_probe.cpp  source_tilt_probe.cpp  symmetry_probe.cpp  trim_factory_irs.py  verify_serial  verify_serial.cpp  wav_to_text.py
Tools/P!NG Serial Generator.app/Contents/: Info.plist
Tools/P!NG Serial Generator.app/Contents/MacOS/: launch
Tools/P!NG Serial Generator.app/Contents/Resources/: serial_generator.py
Tools/Serial Generator (Terminal).app/Contents/: Info.plist
Tools/Serial Generator (Terminal).app/Contents/MacOS/: applet
Tools/Serial Generator (Terminal).app/Contents/Resources/Scripts/: main.scpt
Tools/Serial Generator (Terminal).app/Contents/_CodeSignature/: CodeResources
